--- a/index.html
+++ b/index.html
@@ -11,59 +11,60 @@
     </header>
     <section>
         <h2>Giriş</h2>
-        <p>Bu gizlilik politikası, kullanıcılarının kişisel bilgilerinin nasıl toplandığını, kullanıldığını ve korunduğunu açıklamaktadır. Uygulamamızı kullanarak, bu gizlilik politikasında belirtilen uygulamalarımızı kabul etmiş olursunuz.</p>
+        <p>Bu gizlilik politikası, kullanıcıların kişisel bilgilerinin nasıl toplandığını, kullanıldığını ve korunduğunu açıklamaktadır. Uygulamamızı kullanarak bu gizlilik politikasını kabul etmiş sayılırsınız.</p>
     </section>
     <section>
         <h2>Toplanan Bilgiler</h2>
         <h3>Kişisel Bilgiler</h3>
-        <p>Uygulamamızı kullanırken, belirli kişisel bilgileri toplamak için sizden izin isteyebiliriz. Bu bilgiler şunları içerebilir:</p>
+        <p>Uygulamamızı kullanırken şu bilgiler toplanabilir:</p>
         <ul>
             <li>Ad ve Soyad</li>
             <li>E-posta Adresi</li>
             <li>Telefon Numarası</li>
         </ul>
         <h3>Otomatik Olarak Toplanan Bilgiler</h3>
-        <p>Uygulamamızı kullanırken, belirli bilgileri otomatik olarak toplayabiliriz. Bu bilgiler şunları içerebilir:</p>
+        <p>Uygulamanın kullanımı sırasında otomatik olarak toplanabilecek bilgiler:</p>
         <ul>
-            <li>Cihaz Bilgileri (Cihaz türü, işletim sistemi, benzersiz cihaz tanımlayıcıları)</li>
+            <li>Cihaz Türü ve İşletim Sistemi</li>
             <li>IP Adresi</li>
-            <li>Kullanım Verileri (Uygulama kullanımı, ziyaret edilen sayfalar, tıklamalar)</li>
+            <li>Kullanım Verileri (ziyaret edilen sayfalar, tıklamalar)</li>
         </ul>
     </section>
     <section>
         <h2>Bilgilerin Kullanımı</h2>
-        <p>Topladığımız bilgileri şu amaçlarla kullanabiliriz:</p>
+        <p>Toplanan bilgiler şu amaçlarla kullanılabilir:</p>
         <ul>
-            <li>Uygulamamızı sağlamak ve yönetmek</li>
-            <li>Müşteri desteği sağlamak</li>
-            <li>Uygulamamızı iyileştirmek ve geliştirmek</li>
-            <li>Kullanıcı deneyimini kişiselleştirmek</li>
+            <li>Hizmetlerin sağlanması ve yönetimi</li>
+            <li>Kullanıcı desteği sağlanması</li>
+            <li>Hizmetlerin iyileştirilmesi ve geliştirilmesi</li>
+            <li>Kullanıcı deneyiminin kişiselleştirilmesi</li>
         </ul>
     </section>
     <section>
         <h2>Bilgilerin Paylaşımı</h2>
-        <p>Kişisel bilgilerinizi üçüncü taraflarla yalnızca şu durumlarda paylaşabiliriz:</p>
+        <p>Kişisel bilgiler aşağıdaki durumlarda paylaşılabilir:</p>
         <ul>
-            <li>Yasal gerekliliklere uymak</li>
-            <li>Kullanıcılarımızı ve uygulamamızı korumak</li>
-            <li>Hizmet sağlayıcılarla işbirliği yapmak (örneğin, barındırma, veri analizi hizmetleri)</li>
+            <li>Yasal gerekliliklere uyulması</li>
+            <li>Hizmet sağlayıcılarla işbirliği</li>
+            <li>Kullanıcı güvenliğinin sağlanması</li>
         </ul>
     </section>
     <section>
         <h2>Veri Güvenliği</h2>
-        <p>Kişisel bilgilerinizin güvenliğini sağlamak için makul önlemler alıyoruz. Ancak, internet üzerinden iletilen verilerin güvenliği konusunda kesin garanti veremeyiz.</p>
+        <p>Kullanıcı bilgilerini korumak için çeşitli önlemler alınmıştır. Ancak, internet üzerinden veri iletiminde tamamen garanti verilemez.</p>
     </section>
     <section>
         <h2>Kullanıcı Hakları</h2>
-        <p>Kullanıcılar, kişisel bilgilerinin erişimi, düzeltilmesi veya silinmesi hakkına sahiptir. Bu haklarınızı kullanmak için uygulama içindeki ayarlar bölümünden veya ilgili menüden talepte bulunabilirsiniz.</p>
+        <p>Kullanıcılar, kişisel bilgilerine erişim, düzeltme ve silme hakkına sahiptir. Bu haklar için uygulama içinden veya destek e-posta adresinden talepte bulunabilirsiniz.</p>
     </section>
     <section>
         <h2>Çocukların Gizliliği</h2>
-        <p>Şen Bilezik, 13 yaş altındaki çocuklardan bilerek kişisel bilgi toplamaz. Eğer 13 yaş altındaysanız, lütfen ebeveyn veya vasinizden izin almadan bu uygulamayı kullanmayın.</p>
+        <p>Uygulamamız 13 yaş altındaki bireylerden bilerek bilgi toplamaz. 13 yaş altındaysanız ebeveyn izni olmadan uygulamayı kullanmayınız.</p>
     </section>
     <section>
         <h2>Değişiklikler</h2>
-        <p>Bu gizlilik politikasını zaman zaman güncelleyebiliriz. Güncellemeler bu sayfada yayınlanacak ve yeni tarihle belirtilecektir.</p>
+        <p>Bu gizlilik politikası gerektiğinde güncellenebilir. Güncellemeler bu sayfada yayınlanacaktır.</p>
     </section>
 </body>
 </html>
+
