--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acarın Kuyumculuk Gizlilik Politikası</title>
+    <title>Gizlilik Politikası</title>
 </head>
 <body>
     <header>
-        <h1>Gizlilik Politikası</h1>
+        <h1>Acarın Kuyumculuk Gizlilik Politikası</h1>
     </header>
     <section>
         <h2>Giriş</h2>
