--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gizlilik Politikası</title>
+    <title>Acarın Kuyumculuk Gizlilik Politikası</title>
 </head>
 <body>
     <header>
@@ -11,7 +11,7 @@
     </header>
     <section>
         <h2>Giriş</h2>
-        <p>Bu gizlilik politikası, kullanıcıların kişisel bilgilerinin nasıl toplandığını, kullanıldığını ve korunduğunu açıklamaktadır. Uygulamamızı kullanarak bu gizlilik politikasını kabul etmiş sayılırsınız.</p>
+        <p>Bu gizlilik politikası, Acarın Kuyumculuk tarafından geliştirilmiş olan uygulamanın kullanıcılarının kişisel bilgilerinin nasıl toplandığını, kullanıldığını ve korunduğunu açıklamaktadır. Uygulamamızı kullanarak bu gizlilik politikasını kabul etmiş sayılırsınız.</p>
     </section>
     <section>
         <h2>Toplanan Bilgiler</h2>
@@ -54,8 +54,20 @@
         <p>Kullanıcı bilgilerini korumak için çeşitli önlemler alınmıştır. Ancak, internet üzerinden veri iletiminde tamamen garanti verilemez.</p>
     </section>
     <section>
+        <h2>Veri Saklama ve Silme</h2>
+        <p>Toplanan kişisel bilgiler, yalnızca hizmet sağlamak için gerekli olduğu sürece saklanır. Kullanıcıların talebi üzerine veya hizmet sona erdiğinde, veriler güvenli bir şekilde silinir.</p>
+    </section>
+    <section>
         <h2>Kullanıcı Hakları</h2>
         <p>Kullanıcılar, kişisel bilgilerine erişim, düzeltme ve silme hakkına sahiptir. Bu haklar için uygulama içinden veya destek e-posta adresinden talepte bulunabilirsiniz.</p>
+    </section>
+    <section>
+        <h2>Üçüncü Taraf Hizmetleri ve Çerezler</h2>
+        <p>Uygulamamız, kullanıcı deneyimini geliştirmek ve hizmetlerimizi iyileştirmek amacıyla üçüncü taraf hizmet sağlayıcılar kullanabilir. Bu sağlayıcıların gizlilik politikalarına aşağıdaki bağlantılardan ulaşabilirsiniz:</p>
+        <ul>
+            <li>Google Analytics: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></li>
+        </ul>
+        <p>Ayrıca uygulama, kullanıcı tercihlerini hatırlamak ve deneyimi kişiselleştirmek için çerezler kullanabilir.</p>
     </section>
     <section>
         <h2>Çocukların Gizliliği</h2>
@@ -65,6 +77,16 @@
         <h2>Değişiklikler</h2>
         <p>Bu gizlilik politikası gerektiğinde güncellenebilir. Güncellemeler bu sayfada yayınlanacaktır.</p>
     </section>
+    <section>
+        <h2>Hizmetlerin Coğrafi Kullanılabilirliği</h2>
+        <p>Uygulamamız, dünya genelindeki kullanıcılar tarafından kullanılabilir. Ancak, bazı hizmetler belirli bölgelerde sınırlı olabilir.</p>
+    </section>
+    <section>
+        <h2>İletişim Bilgileri</h2>
+        <p>Gizlilik politikamız hakkında herhangi bir sorunuz varsa veya kişisel bilgilerinizle ilgili bir talepte bulunmak istiyorsanız, lütfen bizimle şu adres üzerinden iletişime geçin: <a href="mailto:destek@acarinkuyumculuk.com">destek@acarinkuyumculuk.com</a>.</p>
+    </section>
+    <footer>
+        <p>© 2024 Acarın Kuyumculuk. Tüm hakları saklıdır.</p>
+    </footer>
 </body>
 </html>
-
