--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <section>
         <h2>Giriş</h2>
-        <p>Bu gizlilik politikası, Acarın Kuyumculuk tarafından geliştirilmiş olan uygulamanın kullanıcılarının kişisel bilgilerinin nasıl toplandığını, kullanıldığını ve korunduğunu açıklamaktadır. Uygulamamızı kullanarak bu gizlilik politikasını kabul etmiş sayılırsınız.</p>
+        <p>Bu gizlilik politikası, Kuyumculuk tarafından geliştirilmiş olan uygulamanın kullanıcılarının kişisel bilgilerinin nasıl toplandığını, kullanıldığını ve korunduğunu açıklamaktadır. Uygulamamızı kullanarak bu gizlilik politikasını kabul etmiş sayılırsınız.</p>
     </section>
     <section>
         <h2>Toplanan Bilgiler</h2>
@@ -83,7 +83,7 @@
     </section>
     <section>
         <h2>İletişim Bilgileri</h2>
-        <p>Gizlilik politikamız hakkında herhangi bir sorunuz varsa veya kişisel bilgilerinizle ilgili bir talepte bulunmak istiyorsanız, lütfen bizimle şu adres üzerinden iletişime geçin: <a href="mailto:destek@acarinkuyumculuk.com">destek@acarinkuyumculuk.com</a>.</p>
+        <p>Gizlilik politikamız hakkında herhangi bir sorunuz varsa veya kişisel bilgilerinizle ilgili bir talepte bulunmak istiyorsanız, lütfen bizimle şu adres üzerinden iletişime geçin: <a href="mailto:info@acarin.com.tr">dinfo@acarin.com.tr</a>.</p>
     </section>
     <footer>
         <p>© 2024 Acarın Kuyumculuk. Tüm hakları saklıdır.</p>
