--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </section>
     <section>
         <h2>İletişim Bilgileri</h2>
-        <p>Gizlilik politikamız hakkında herhangi bir sorunuz varsa veya kişisel bilgilerinizle ilgili bir talepte bulunmak istiyorsanız, lütfen bizimle şu adres üzerinden iletişime geçin: <a href="mailto:info@acarin.com.tr">dinfo@acarin.com.tr</a>.</p>
+        <p>Gizlilik politikamız hakkında herhangi bir sorunuz varsa veya kişisel bilgilerinizle ilgili bir talepte bulunmak istiyorsanız, lütfen bizimle şu adres üzerinden iletişime geçin: <a href="mailto:info@acarin.com.tr">info@acarin.com.tr</a>.</p>
     </section>
     <footer>
         <p>© 2024 Acarın Kuyumculuk. Tüm hakları saklıdır.</p>
